--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,6 @@ html, body {
     text-align: center;
     margin: 0%;
     padding: 0%;
-    /* height: 100%;
-    width: 100%; */
 }
 
 .title {
@@ -36,6 +34,8 @@ html, body {
     transform: translate(-50%, -50%);
     position: absolute;
     z-index: 1;
+    filter: drop-shadow(15px 15px 15px #000);
+    color: #00b3ac;
 }
 
 #tank {
