--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,9 @@ html, body {
 }
 
 /* text */
-
 .header-text {
     text-align: center;
+    min-width: 400px;
     margin: 0%;
     padding: 0%;
 }
@@ -38,9 +38,28 @@ html, body {
     color: #00b3ac;
 }
 
+#water-text {
+    position: relative;
+    text-align: center;
+    min-width: 300px; 
+    width: 100%;
+    min-height: 100px; 
+    overflow: visible; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    z-index: 1;
+    filter: drop-shadow(15px 15px 15px #000);
+    color: #00b3ac;
+}
+
+/* background */
 #tank {
     width: 100%;
     height: 100%;
+    /* background in case of old browsers (gradient does not work on those) */
+    background: #498ac6;
     background-image: linear-gradient(#77b1e8, #498ac6, #0e2336);
     position: relative;
     overflow: hidden;
